--- a/index.html
+++ b/index.html
@@ -187,19 +187,19 @@ html, body {
         <span class="tooltip">Per aiutarti a promuoverti come Coach Professionista, realizzeremo una landing page personalizzata con la tua foto, la tua storia e le info che desideri condividere. Sarà brandizzata Leone Master School, per valorizzare la tua immagine con autorevolezza e professionalità.</span>
 </div>
 </div>
-<div class="pin" style="top: 380px; left:   74.34%">
-<div class="title">Partecipazione dei tuoi<br> Clienti all’evento “Io Creo il Mio Destino”
+<div class="pin" style="top: 365px; left:   74.34%">
+<div class="title">Accesso dei tuoi<br> Clienti all’evento<br> “Io Creo il Mio Destino”
         <span class="tooltip">Man mano che costruirai la tua rete clienti, avrai un vantaggio in più: potrai offrire loro l’accesso esclusivo all’evento dal vivo “Io Creo il Mio Destino” (3 giorni di formazione intensiva), aumentando il valore che offri e distinguendoti dalla concorrenza.</span>
 </div>
 </div>
 <!-- Copia spostata Meta Ads -->
-<div class="pin" style="top: 556px; left: 69.48%">
+<div class="pin" style="top: 556px; left: 72.48%">
   <div class="title">Videocorso<br> Personal Branding
     <span class="tooltip">Per continuare la tua formazione in marketing, vendita e sviluppo della rete clienti, hai subito accesso a videolezioni pratiche per creare da zero strategie di social media, network e personal branding nel tuo territorio.</span>
   </div>
 </div>
 <!-- Copia spostata prova 1 -->
-<div class="pin" style="top: 525px; left: 57%">
+<div class="pin" style="top: 525px; left: 59%">
   <div class="title">Schemi, Piani Editoriali,<br> Layout, Visual per i Social<br> Media Pronti all’uso
     <span class="tooltip">Riceverai schemi e layout per costruire il tuo vantaggio competitivo e comunicare al meglio chi sei come Coach. Ti guideremo su come gestire i social: cosa pubblicare, cosa scrivere, quali post creare e ti forniremo immagini professionali per reel e caroselli.</span>
   </div>
@@ -211,7 +211,7 @@ html, body {
   </div>
 </div>
 <div class="pin" style="top: 460px; left:   88.74%">
-<div class="title" style="margin-left: -100px;">Partecipazione dei tuoi Clienti ai Master LMS a propria scelta
+<div class="title" style="margin-left: -100px;">Porta i tuoi Clienti ai Master LMS a propria scelta
         <span class="tooltip">Oltre all’evento, potrai garantire ai tuoi clienti una consulenza gratuita per accesso ad uno dei Master Leone Master School. Sarà tua premura compilare un form per segnalarci tutti i clienti che hanno mosso interesse per i master di crescita personali e professionali, indirizzandoli verso la scuola che ha formato e reso te un professionista: la Leone Master School.</span>
 </div>
 </div>
